# pyiiif

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh  utils.py  viewer.html  wsgi.py
app/: __init__.py  config.py  errors.py  new.py
app/routes/: iiif.py  viewer.py
app/services/: slide.py
app/utils/: http.py  image.py  path.py
docker/: Dockerfile
public/: styles.css  viewer.html
public/iiif-sources/: samples.json
public/js/: main.js
public/js/osd/: blur-handler.js  utils.js  viewer.js
public/js/tree/: renderer.js  search.js  tree.js
public/js/ui/: sidebar.js
