[project]
name = "pyiiif"
version = "0.1.0"
description = "Python IIIF Service: Fast and scalable tiling for Whole Slide Imaging (WSI)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT"}

authors = [
  { name = "Sugeng D. Cahyo", email = "sugengdcahyo@gmail.com"}
]

keywords = [
  "IIIF",
  "Whole Slide Imaging",
  "Digital Pathology",
  "Image Tiling",
  "Flask Service"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Framework :: Flask",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries"
]

dependencies = [
  "flask>=3.1.1",
  "flask-cors>=6.0.1",
  "pillow>=11.3.0",
  "python-dotenv>=1.1.1",
  "gunicorn>=23.0.0",
  "ipython>=9.4.0",
]

[project.urls]
Homepage = "https://github.com/sugengdcahyo/pyiiif"
Documentation = "https://sugengdcahyo.github.io/pyiiif"
Source = "https://github.com/sugengdcahyo/pyiiif"
Issues = "https://github.com/sugengdcahyo/pyiiif/issues"

